[gd_scene load_steps=10 format=3 uid="uid://cfoqrrqdtryd6"]

[ext_resource type="Script" path="res://gui/dialog/shop/shop.gd" id="1_jtdkp"]
[ext_resource type="Texture2D" uid="uid://b2e0dh74ehj5j" path="res://gui/dialog/text-bubble.png" id="2_kiabx"]
[ext_resource type="Texture2D" uid="uid://bne0lyj6plf4a" path="res://npc/villager/indio.webp" id="4_chlhv"]
[ext_resource type="FontFile" uid="uid://btlftr7loqd5u" path="res://fonts/Abaddon Bold.ttf" id="4_grb4r"]
[ext_resource type="Texture2D" uid="uid://by42y36e5bj5b" path="res://gui/player_hud/guarana/guaran√°.png" id="5_cymvw"]

[sub_resource type="Gradient" id="Gradient_ne6n8"]
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_xkkcw"]
gradient = SubResource("Gradient_ne6n8")
fill_to = Vector2(0, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_lqya5"]
content_margin_left = 14.0
content_margin_top = 10.0
content_margin_right = 14.0
content_margin_bottom = 10.0
texture = ExtResource("2_kiabx")
texture_margin_left = 16.0
texture_margin_top = 16.0
texture_margin_right = 16.0
texture_margin_bottom = 16.0

[sub_resource type="CanvasTexture" id="CanvasTexture_hp0tr"]

[node name="Shop" type="CanvasLayer"]
script = ExtResource("1_jtdkp")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="UI"]
modulate = Color(0.121569, 0.121569, 0.121569, 1)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_xkkcw")

[node name="PanelContainer" type="PanelContainer" parent="UI"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -466.0
offset_top = -154.0
offset_right = -16.0
offset_bottom = -14.0
grow_horizontal = 0
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_lqya5")

[node name="Label" type="Label" parent="UI"]
layout_mode = 0
offset_left = 109.0
offset_top = 151.0
offset_right = 149.0
offset_bottom = 169.0
theme_override_colors/font_color = Color(0.894118, 0.862745, 0.796078, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("4_grb4r")
text = "Name"

[node name="NinePatchRect" type="NinePatchRect" parent="UI"]
modulate = Color(0.28, 0.15078, 0.0812, 1)
layout_mode = 0
offset_left = 5.0
offset_top = 163.0
offset_right = 105.0
offset_bottom = 315.0
texture = SubResource("CanvasTexture_hp0tr")
draw_center = false
patch_margin_left = 2
patch_margin_top = 2
patch_margin_right = 2
patch_margin_bottom = 2

[node name="PortraitSprite" type="Sprite2D" parent="UI"]
position = Vector2(55, 239)
texture = ExtResource("4_chlhv")

[node name="Wepon" type="Button" parent="UI"]
layout_mode = 0
offset_left = 124.0
offset_top = 205.0
offset_right = 210.0
offset_bottom = 245.0
text = "Arma"
metadata/_edit_group_ = true

[node name="WeponPrice" type="Label" parent="UI"]
layout_mode = 0
offset_left = 138.0
offset_top = 256.0
offset_right = 178.0
offset_bottom = 274.0
theme_override_colors/font_color = Color(0.894118, 0.862745, 0.796078, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("4_grb4r")
text = "  0 x"
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="UI"]
position = Vector2(190, 264)
scale = Vector2(0.65, 0.65)
texture = ExtResource("5_cymvw")
metadata/_edit_group_ = true

[node name="Bow" type="Button" parent="UI"]
layout_mode = 0
offset_left = 236.0
offset_top = 205.0
offset_right = 324.0
offset_bottom = 245.0
text = "Arco"
metadata/_edit_group_ = true

[node name="BowPrice" type="Label" parent="UI"]
layout_mode = 0
offset_left = 249.0
offset_top = 256.0
offset_right = 292.0
offset_bottom = 274.0
theme_override_colors/font_color = Color(0.894118, 0.862745, 0.796078, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("4_grb4r")
text = "  0 x "
metadata/_edit_group_ = true

[node name="Sprite2D2" type="Sprite2D" parent="UI"]
position = Vector2(303, 263)
scale = Vector2(0.65, 0.65)
texture = ExtResource("5_cymvw")
metadata/_edit_group_ = true

[node name="MaxHp" type="Button" parent="UI"]
layout_mode = 0
offset_left = 346.0
offset_top = 203.0
offset_right = 435.0
offset_bottom = 243.0
text = "Vida "
metadata/_edit_group_ = true

[node name="MaxHpPrice" type="Label" parent="UI"]
layout_mode = 0
offset_left = 360.0
offset_top = 256.0
offset_right = 403.0
offset_bottom = 274.0
theme_override_colors/font_color = Color(0.894118, 0.862745, 0.796078, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("4_grb4r")
text = "  0 x "
metadata/_edit_group_ = true

[node name="Sprite2D3" type="Sprite2D" parent="UI"]
position = Vector2(412, 264)
scale = Vector2(0.65, 0.65)
texture = ExtResource("5_cymvw")
metadata/_edit_group_ = true

[node name="Heal" type="Button" parent="UI"]
layout_mode = 0
offset_left = 453.0
offset_top = 203.0
offset_right = 544.0
offset_bottom = 243.0
text = "Cura"
metadata/_edit_group_ = true

[node name="HealPrice" type="Label" parent="UI"]
layout_mode = 0
offset_left = 467.0
offset_top = 255.0
offset_right = 510.0
offset_bottom = 273.0
theme_override_colors/font_color = Color(0.894118, 0.862745, 0.796078, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_x = 0
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("4_grb4r")
text = "  0 x "
metadata/_edit_group_ = true

[node name="Sprite2D4" type="Sprite2D" parent="UI"]
position = Vector2(520, 262)
scale = Vector2(0.65, 0.65)
texture = ExtResource("5_cymvw")
metadata/_edit_group_ = true
